# AIC26

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  progress.txt  pyproject.toml
.windsurf/rules/: backend-api.md  competition-context.md  frontend-ui.md  general.md  python-ml.md
.windsurf/workflows/: build-embeddings.md  eval-local.md  export-audit-snapshot.md  extract-keyframes.md  ingest-data.md  mock-contest.md  profile-latency.md  run-dev.md  submit-result.md
artifacts/: README.md  operator-cheatsheet.md
artifacts/prompt-library/: README.md  extract-visual-concepts.md  keyframe-caption.md  query-rewrite.md  rerank-results.md  vi-en-translate.md
artifacts/query-templates/: 2024-final-Q01-incremental.md  2024-final-Q02-video-kis.md  2024-final-Q03-interview.md  2024-final-Q04-traffic.md  2024-final-Q05-cultural.md  2024-prelim-Q01-press-conf.md  2024-prelim-Q02-flood.md  2024-prelim-Q03-football.md  README.md  example-textual-kis.md  example-video-kis.md  template-blank.md
artifacts/submission-format/: README.md  csv-format.md  example.json  schema.json
backend/: README.md
data/: README.md
data/queries/: sample.json
docs/: 00-competition-overview.md  01-rules-and-format.md  02-data-spec.md  03-timeline-milestones.md  04-tech-stack.md  05-references-papers.md  06-team-roles.md  README.md  contest-day-checklist.md  glossary.md  operator-manual.md  risk-register.md  team-guide-vi.md
docs/decisions/: ADR-001-once-ui-design-system.md  ADR-002-compete-in-group-a.md  ADR-003-defer-agent-rag.md  README.md
docs/minutes/: 00-kickoff.html
frontend/: README.md
ml/: README.md
notebooks/: README.md
scripts/: README.md
tests/: README.md
